Adds JVM arguments similar to our setup.